# narritive-rag-mcp

./: .gitignore  README.md  SESSION_SUMMARY.md  TOOLS_REFERENCE.md  bridge.py  llamafile_story.py  llm_conversation.py  llm_query.py  llm_story.py  llm_story_simple.py  llm_story_simulated.py  llm_story_with_tools.py  llm_story_working.py  mcp_bridge.py  mcp_bridge_example.py  mcp_bridge_flask.py  mcp_bridge_simple.py  mcp_bridge_simulated.py  mcp_server.py  pyproject.toml  silmarillion.txt  test_llamafile_direct.py  test_simple_bridge.py
archive/: mcp_bridge_simple.py  test_all_tools.py  test_deepseek_quick.py  test_deepseek_tools.py  test_simulated_simple.py  test_tool_calling.py
